# SSLDemoTest

./: CMakeLists.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ssldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  openssl-context.cpp  openssl-socket.cpp
app/src/main/java/com/example/ssldemo/: Httpfunction.java  MainActivity.java
app/src/main/java/com/example/ssldemo/openssl/: OkHttpEventListener.java  OpenSSLContext.java  OpenSSLSocket.java  OpenSSLSocketFactory.java  OpenSSLTrustManager.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ssldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
